# amplifier-module-hooks-explanatory

./: README.md  pyproject.toml
amplifier_hooks_explanatory/: main.py
amplifier_module_hooks_explanatory/: __init__.py  main.py
tests/: test_hook.py
