[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-hooks-explanatory"
version = "0.1.0"
description = "Injects explanatory output style instructions at session start"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "MJ Jabbour", email = "mjabbour@microsoft.com" }
]
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-explanatory = "amplifier_module_hooks_explanatory:mount"

[dependency-groups]
dev = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
